--- a/charts_flutter/pubspec.yaml
+++ b/charts_flutter/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   # The latest pub version is commented out and shown below as an example.
   # charts_common: 0.6.0
   charts_common:
-    path: ../charts_common/
+    git:
+      url: https://gitlab.com/r2-technology/mymuse/charts_flutter
+      path: charts_common
   collection: ^1.14.5
   flutter:
     sdk: flutter
